salesforce-main/src/main/default/objects/Agent__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <description>Agency&apos;s address line 2</description>
    <label>Address 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>