salesforce-main/src/main/default/objects/Agent__c/fields/Address_3__c.field-meta.xml
<CustomField>
    <fullName>Address_3__c</fullName>
    <description>Agency&apos;s address line 3</description>
    <label>Address 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>