salesforce-main/src/main/default/objects/Agent__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Agency&apos;s address city</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>