salesforce-main/src/main/default/objects/Agent__c/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <description>Primary contact at agency&apos;s first name</description>
    <label>Contact First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>