salesforce-main/src/main/default/objects/Agent__c/fields/Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Name__c</fullName>
    <description>Primary contact at agency&apos;s last name</description>
    <label>Contact Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>