salesforce-main/src/main/default/objects/Agent__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Agency&apos;s country</description>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>