salesforce-main/src/main/default/objects/Agent__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description field of agency</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>