salesforce-main/src/main/default/objects/Agent__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Primary contact&apos;s email address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>