salesforce-main/src/main/default/objects/Agent__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Agency&apos;s fax number</description>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>