salesforce-main/src/main/default/objects/Agent__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Agency&apos;s phone</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>