salesforce-main/src/main/default/objects/Agent__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Agency&apos;s postal code</description>
    <label>Postal Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>