salesforce-main/src/main/default/objects/Agent__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <description>Agency&apos;s address state/province</description>
    <label>State/Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>